--- a/index.html
+++ b/index.html
@@ -102,32 +102,31 @@
         <p>Português (nativo), Inglês (intermediario), Francês (fluente)</p>
         <h3>Centro de Interesse</h3>
         <p>Sites, games, músicas:</p>
-        <p>* Canal YouTube: <a href="https://www.youtube.com/@AnimeMusicVideos5">youtube.com/channel/UC4XQ29bhRmhxvYT9-4a9Otw</a></p>
+        <p>* Canal YouTube: <a href="https://youtube.com/@raquelsynths?si=4kz6ff2nTFAr2H5M">youtube.com/channel/UC4XQ29bhRmhxvYT9-4a9Otw</a></p>
 
         <h3>Meus Interesses Tecnológicos</h3>
         <div class="learning-path">
             <div class="interest-card suno-ai">
                 <div class="interest-header">
                     <img src="https://suno.com/favicon.ico" alt="SunoAI Icon" class="interest-icon">
-                    <h3>Explorando SunoAI</h3>
+         <h3>Projeto de IA Produtora Musical: RaQuel Synths - RQS | 2024 – Presente</h3>
                 </div>
 
                 <div class="interest-content">
-                    <p>Atualmente estou explorando as possibilidades incríveis do SunoAI para:</p>
-                    <ul class="interest-list">
-                        <li>🎵 Compreender a geração de música via IA</li>
-                        <li>🤖 Experimentar com inteligência artificial criativa</li>
-                        <li>💡 Aprender sobre integração de APIs de IA</li>
-                        <li>Compor músicas utilizando técnicas e prompts de comando para gerar belas músicas.</li>
+                        <ul class="interest-list">
+                <li>🎵 Criação de músicas originais com IA (Suno AI) e engenharia de prompts para produção de trilhas cyberpunk.</li>
+                        <li>🤖 Edição e mixagem manual em Audacity para agregar elementos humanos aos outputs de IA.</li>
+                        <li>💡 Distribuição em plataformas digitais (Spotify, SoundCloud) com crescimento orgânico de 8000+ streams.</li>
+                        <li>🤖 Compor músicas utilizando técnicas e prompts de comando para gerar belas músicas.Desenvolvimento de universo narrativo imersivo com personagens (Quel, Bro, Jo) para engajamento multiplataforma.</li>
                     </ul>
 
                     <div class="exploration-box">
-                        <p>Confira essa demonstração que criei:</p>
+                        <p>Confira as musicas no Spotify:</p>
                         <div class="demo-example">
-                            <a href="https://suno.com/song/729b611c-afe0-4124-92d8-c7f94d16c110" target="_blank" class="suno-link">
-                                <img src="assets/image_large_729b611c-afe0-4124-92d8-c7f94d16c110.jpeg" alt="Minha Primeira Experiência com SunoAI" class="demo-image">
+                            <a href="https://open.spotify.com/intl-pt/artist/1yrPZaFyIcsCjj876LaHXL?si=kGfd-jlgTICPMW-WaIhd8g" target="_blank" class="suno-link">
+                                <img src="assets/Cyberpunk Glitch Logo_simple.png" alt="Minha Primeira Experiência com SunoAI" class="demo-image">
                             </a>
-                            <p class="demo-text">Clique na imagem para visitar o Suno.com</p>
+                            <p class="demo-text">Clique na imagem para visitar o spotify.com</p>
                         </div>
                     </div>
                 </div>
